-- This is just for CI! You should copy and paste P.hs into your project.
name:                  prelude
version:               0.1.0.0
synopsis:              A copy-paste prelude
homepage:              https://github.com/thumphries/prelude
license:               BSD3
license-file:          LICENSE
author:                Tim Humphries
maintainer:            tim@utf8.me
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:     P
  build-depends:       base
  default-language:    Haskell2010
